# template-cmake-project

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  myApp.cpp  my_app.cpp
include/myLib/: myLib.h
include/my_lib/: my_lib.h
src/: CMakeLists.txt
src/myLib/: myLib.cpp
src/my_lib/: my_lib.cpp
tests/: CMakeLists.txt  addition_tests.cpp  myLib_tests.cpp  subtraction_tests.cpp
